<?xml version="1.0" encoding="utf-8"?>
<!--
  ~      Copyright (C) 2016  Vikash Kumar
  ~
  ~      This program is free software: you can redistribute it and/or modify
  ~      it under the terms of the GNU General Public License as published by
  ~      the Free Software Foundation, either version 3 of the License, or
  ~      (at your option) any later version.
  ~
  ~      This program is distributed in the hope that it will be useful,
  ~      but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~      MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~      GNU General Public License for more details.
  ~
  ~      You should have received a copy of the GNU General Public License
  ~      along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ~
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/done"
        android:orderInCategory="100"
        android:icon="@drawable/done"
        android:title="@string/done" />

    <item
        android:id="@+id/postPone"
        android:orderInCategory="101"
        android:icon="@drawable/calendar"
        android:title="@string/postPone" />

    <item
        android:id="@+id/delete"
        android:orderInCategory="102"
        android:icon="@drawable/delete"
        android:title="@string/delete" />
</menu>